实现一些方法